@@ -1,11 +1,16 @@
 # Builds a docker image from a locally built Maven war. Requires 'mvn package' to have been run beforehand
-FROM tomcat:9.0-jdk11-slim
+#FROM tomcat:9.0-jdk11-slim
+FROM eclipse-temurin:17-jre-alpine
 LABEL Author="Europeana Foundation <development@europeana.eu>"
-WORKDIR /usr/local/tomcat/webapps
+#WORKDIR /usr/local/tomcat/webapps
 
 # Configure APM and add APM agent
 ENV ELASTIC_APM_VERSION 1.34.1
 ADD https://repo1.maven.org/maven2/co/elastic/apm/elastic-apm-agent/$ELASTIC_APM_VERSION/elastic-apm-agent-$ELASTIC_APM_VERSION.jar  /opt/app/elastic-apm-agent.jar
 
 # Copy unzipped directory so we can mount config files in Kubernetes pod
-COPY entity-web/target/entity-web ./ROOT/
+#COPY entity-web/target/entity-web ./ROOT/
+
+COPY ./entity-web/target/entity-web-executable.jar /opt/app/entity-web-executable.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "--add-opens=java.base/java.util=ALL-UNNAMED",  "--add-opens=java.base/java.lang=ALL-UNNAMED",   "-jar", "/opt/app/entity-web-executable.jar"]
